TOOLS-945 Fixed overlapping buttons in contact info pane

--- a/plugins/frontlinesms-core/web-app/css/unreviewed-core.css
+++ b/plugins/frontlinesms-core/web-app/css/unreviewed-core.css
@@ -98,6 +98,7 @@ input[type=text]:-ms-input-placeholder {
 #body.contacts #detail #single-contact #action-buttons .icon-remove-sign {
 		font-size:14px; }
 #body.contacts #contact-infos a:after { content:'\a'; white-space:pre; }
+#body.contacts #contact-infos { min-width: 170px; }
 #body.contacts label.error,
 #body.contacts label.warning { display:block; margin:5px 0; padding:0; }
 #body.contacts label.error { color:#c00; }
